--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -17,6 +17,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Content</servlet-name>
 		<url-pattern>/content</url-pattern>
 	</servlet-mapping>
+	<servlet>
+	    <servlet-name>VenmoAuth</servlet-name>
+	    <servlet-class>com.suchbeacon.web.servlet.VenmoAuthServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+	    <servlet-name>VenmoAuth</servlet-name>
+	    <url-pattern>/venauth</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
